refactoring js code and css

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -482,4 +482,5 @@ table {
    background-image: url('/img/tatami_navbar.png');
    background-repeat: repeat-x;
    border-color: transparent;
+   box-shadow: none;
 }
