Firt implementation of a two pane preview for status editor
* using bootstrap tabs

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -69,6 +69,11 @@ form {
     height: 20px;
 }
 
+#updateStatusEditorTab {
+    display: none;
+    margin-bottom: 0px;
+}
+
 #contentGroup {
     display: none;
 }
