First working implementation of a two-tab editor with preview
* preview on second tab
* auto-hide/show of tabs
* use pagedown converter and sanitizer

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -71,7 +71,11 @@ form {
 
 #updateStatusEditorTab {
     display: none;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
+}
+
+#updateStatusPreview {
+    margin-top : 3px;
 }
 
 #contentGroup {
