Hide update status button on page show
* the button is only displayed when the form is opened

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -86,6 +86,10 @@ form {
     display: none;
 }
 
+#updateStatusBtns {
+    display:none;
+}
+
 .counter{
     font-size:80%;
     font-style: italic;
