responsive refactoring search engine

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -372,8 +372,9 @@ table {
 /**
 ** Search Engine
 **/
-.hasCategory{
-    width: 280px;
+
+.typeahead.dropdown-menu.hasCategory{
+    /*width: 280px;*/
     background: #EDEDED;
     padding: 0px;
 }
@@ -387,17 +388,18 @@ table {
     cursor: default;
     height: auto;
     background: #EDEDED;
-    padding: 5px 5px 5px 13px;
+    padding: 6px 5px 5px 13px;
     width:30px;
 }
 .hasCategory li.first{
     margin-top:-31px;
 }
 .hasCategory li.first, .hasCategory .category{
-    border-top: 1px solid #CCCCCC;
+    /*border-top: 1px solid #CCCCCC;*/
 }
 .hasCategory li.item.active a{
     height: 24px;
+    padding:0;
 }
 .hasCategory li:first-child{
     border-top: none;
@@ -416,6 +418,7 @@ table {
 }
 .hasCategory li.item h4 a{
     color:#000;
+    padding:0;
 }
 .hasCategory li.item p{
     font-size: 11px;
