Cleaned up attachements

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -82,6 +82,11 @@ form {
     display: none;
 }
 
+.attachmentBar {
+    height: 18px;
+    background: green;
+}
+
 #updateStatusPrivate {
     display: none;
 }
