Move help specific style frm jsp to css file

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -535,3 +535,7 @@ span.quota{
 #accountContent .progress {
     position:relative;
 }
+
+#updateStatusContentHelp, #timelineHelp, #groupsHelp, #follow-suggestHelp, #profileTrendsHelp{
+	width : 400px;
+}
