Fix firefox's render (ignore max-width of img)

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -535,3 +535,9 @@ span.quota{
 #accountContent .progress {
     position:relative;
 }
+
+.fixFFmax-width{
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+}
