--- a/src/main/resources/META-INF/tatami/mails/invitationMessageEmail.vm
+++ b/src/main/resources/META-INF/tatami/mails/invitationMessageEmail.vm
@@ -1,11 +1,11 @@
 #parse("common.vm")
 #msg("invitationMessage.greeting"),
 
-${user} ${user.LastName} #msg("invitationMessage.text1").
+${user} #msg("invitationMessage.text1")
 
-#msg("invitationMessage.text2") :
+#msg("invitationMessage.text2")
 
-${statusUrl}
+${invitationUrl}
 
 #msg("invitationMessage.text3")
 
