--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -540,8 +540,12 @@ span.quota{
     position:relative;
 }
 
-#updateStatusContentHelp, #timelineHelp, #groupsHelp, #follow-suggestHelp, #profileTrendsHelp{
+#presentationHelp, #updateStatusContentHelp, #timelineHelp, #groupsHelp, #follow-suggestHelp, #profileTrendsHelp{
 	width : 400px;
+}
+
+#timelineHelp {
+    padding-top: 46px;
 }
 
 .fixFFmax-width{
