--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -126,7 +126,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5), 0 0 10px rgba(175, 120, 25, 0.5);
 }
 
-.tatam > div.well {
+.pointer {
     cursor: pointer;
 }
 
