--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -210,9 +210,8 @@
     padding-top: 15px;
 }
 
-
 /**
-** Search Engine
+* Search Engine
 **/
 
 .typeahead.dropdown-menu.hasCategory{
@@ -237,7 +236,6 @@
     width: 320px;
   }
 }
-
 
 .hasCategory .item{
     height: 33px;
