Fix firefox background-image

--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -315,3 +315,11 @@
   -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
 }
+
+.background-image-fffix {
+    overflow: auto;
+}
+
+.background-image-fffix img {
+    display: block;
+}
