--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -73,6 +73,15 @@
     word-wrap: break-word;
 }
 
+.status-action {
+    padding: 0px;
+    margin: 0px
+}
+
+.status-action:hover {
+    text-decoration: none;
+}
+
 .profile-card > img {
     margin-right: 5px;
 }
@@ -144,13 +153,14 @@
 }
 
 .tatams-share {
+    padding-top: 5px;
     border-top: 2px solid #bcbcbc;
 }
 
 .tatams-share-title {
     border-right: 2px solid #bcbcbc;
-    padding-right: 10px;
-    margin: 10px;
+    padding-right: 5px;
+    margin: 5px;
 }
 
 .tatams-share-img {
@@ -158,7 +168,6 @@
 }
 
 .tatams-discussion {
-    border-top: 2px solid #bcbcbc;
     margin-top: 5px;
 }
 
