--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -204,7 +204,7 @@
 }
 
 #tatamiBody {
-    padding-top: 15px;
+    padding-top: 5px;
 }
 
 /**
@@ -331,4 +331,26 @@
 
 .background-image-fffix img {
     display: block;
+}
+
+.searchbody h3 {
+    padding: 0px;
+    margin: 0px;
+    font-weight: normal;
+    font-size: 1.4em;
+}
+
+.searchbody hr {
+    padding: 0px;
+    margin: 0px;
+    border-top: 1px solid #CCCCCC;
+    margin-top: 10px;
+}
+
+.deleteicon {
+    position: absolute;
+    display: block;
+    top: 9px;
+    right: 22px;
+    cursor: pointer;
 }
