Remove white-space
Fix <code>'s render

- With `wrap-space`
![With wrap-space](https://dl.dropboxusercontent.com/u/2347680/Screenshot/with-wrap-space.png)

- Without `wrap-space`
![Without wrap-space](https://dl.dropboxusercontent.com/u/2347680/Screenshot/without-wrap-space.png)

--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -69,7 +69,7 @@
 }
 
 .tatam *, .trends *, .profile *, .preview-tatam *, .profile-card, .wrap * {
-    white-space: normal;
+    /* white-space: normal; */
     word-wrap: break-word;
 }
 
