--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -17,6 +17,51 @@
     }
 }
 
+body {
+    background-image: url(/img/wallpaper.jpg);
+}
+
+h4 {
+    font-size: inherit;
+}
+
+.well {
+    background-color: white;
+    box-shadow: none;
+    border-radius: 5px;
+}
+
+.well h4 {
+    margin: 0px;
+}
+
+.navbar {
+    background-color: black;
+}
+
+.navbar .nav > li > a {
+    color: #CCCCCC;
+}
+
+.navbar .nav > li > a:hover {
+    color: white;
+}
+
+.navbar .nav li.dropdown > .dropdown-toggle .caret {
+    border-top-color: #CCCCCC; 
+    border-bottom-color: #CCCCCC; 
+}
+
+.navbar .nav li.dropdown > .dropdown-toggle .caret:hover {
+    border-top-color: white; 
+    border-bottom-color: white;
+}
+
+.navbar .nav li.dropdown.open > .dropdown-toggle {
+    color: white;
+    background-color: inherit;
+}
+
 .img-small {
     width: 25px;
     height: 25px;
@@ -78,8 +123,9 @@
 }
 
 .status-action {
-    padding: 10px;
-    margin: 0px
+    padding: 0;
+    margin: 0;
+    margin-left: 2px;
 }
 
 .status-action:hover {
@@ -90,7 +136,8 @@
     margin-right: 5px;
 }
 
-.tatam, .useritem {
+/*.tatam, .useritem {*/
+.useritem {
     padding: 0px 0px 0px 60px;
     overflow: hidden;
     display: none;
@@ -139,17 +186,21 @@
 }
 
 .tatams {
-    margin-top: 5px;
     margin-bottom: 15px;
+}
+
+.tatam > div:first-child, .useritem > div:first-child {
+    padding: 5px 10px 0px 10px;
 }
 
 .tatams > * {
     margin-bottom: 0px;
-    padding-bottom: 2px;
+    padding-bottom: 0px;
 }
 
-.tatams > *:hover {
-    background-color: #f5f5f5;
+.tatam-hover > *:hover {
+    /*background-color: #f5f5f5;*/
+    background-color: #ECF1F7;
 }
 
 .tatams > *:last-child {
@@ -158,7 +209,7 @@
 
 .tatams-share {
     padding-top: 5px;
-    border-top: 2px solid #bcbcbc;
+    /*border-top: 2px solid #bcbcbc;*/
 }
 
 .tatams-share-title {
@@ -172,7 +223,8 @@
 }
 
 .tatams-discussion {
-    margin-top: 5px;
+    margin-top: 0px;
+    margin-left: -60px;
 }
 
 .tatams-discussion > .tatam > header {
@@ -188,8 +240,8 @@
 }
 
 .refresh-button {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .dropzone {
@@ -208,7 +260,93 @@
 }
 
 #tatamiBody {
-    padding-top: 5px;
+    padding: 10px 15px 10px 0px;
+}
+
+.tatam {
+    background-color: white;
+    border-top: 1px solid #CCCCCC;
+/*    border-right: 1px solid #CCCCCC;
+    border-left: 1px solid #CCCCCC;*/
+    border-bottom: 1px solid #CCCCCC;
+    padding: 0px 0px 0px 60px;
+    margin-bottom: -1px;
+    overflow: hidden;
+    display: none;
+}
+
+.tatam-border-lr {
+    border-right: 1px solid #CCCCCC;
+    border-left: 1px solid #CCCCCC;
+}
+
+.tatams-content {
+    margin-top: 10px;
+}
+
+.tatams-content-title {
+    border-top: 1px solid #CCCCCC;
+    border-left: 1px solid #CCCCCC;
+    border-right: 1px solid #CCCCCC;
+    background-color: white;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.tatams-content h3 {
+    padding: 5px 0px 5px 10px;
+    margin: 0px;
+    font-weight: normal;
+    font-size: 1.4em;
+}
+
+.tatams-content hr {
+    padding: 0px;
+    margin: 0px;
+    border-top: 1px solid #CCCCCC;
+    margin-bottom: -2px;
+    margin-top: 0px;
+}
+
+.tatams-container {
+    min-height: 75px;
+    background-image: url(/img/wallpaper.jpg);
+}
+
+.tatam-expand-container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-top: 1px solid #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
+    border-radius: 10px;
+}
+
+.homebody-nav {
+    background-color: white;
+}
+
+.nav-justified {
+    border-collapse: collapse;
+}
+
+.nav-justified > li {
+    border: 1px solid #CCCCCC;
+    padding: 0px;
+}
+
+.nav-tabs > li > a {
+    border-radius: 0px;
+}
+
+.homebody-nav {
+    background-color: white;
+}
+
+.homebody-nav .active a {
+    color: #333333;
+}
+
+.nav-tabs.nav-justified > .active > a {
+    border-bottom-color: #CCCCCC;
 }
 
 /**
@@ -357,4 +495,21 @@
     top: 9px;
     right: 22px;
     cursor: pointer;
+}
+
+.statusitem-name {
+    padding: 0px;
+    margin: 0 0 0 60px;
+}
+
+.statusitem-content {
+    margin-left: 60px;
+}
+
+.statusitem-footer {
+    margin-left: 60px;   
+}
+
+.markdown p {
+    margin: 5px 0 5px 0;
 }
