Finished adding new status types

--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -113,6 +113,11 @@
     display: block;
 }
 
+.mention-share {
+    font-size: 80%;
+    color: #888888;
+}
+
 .tatam.favorite {
     background-image: url(img/favorite.png);
     background-repeat: no-repeat;
