--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -15,6 +15,15 @@
         margin: 0;
 
     }
+
+    #tatamiBody {
+        padding: 0px;
+    }
+}
+@media screen and (min-width: 767px) {
+    #tatamiBody {
+        padding: 10px 15px 10px 0px;
+    }
 }
 
 body {
@@ -69,6 +78,14 @@ h4 {
     background-size: cover;
 }
 
+.img-reply {
+    width: 35px;
+    height: 35px;
+    margin-left: 10px;
+    background-position: center center;
+    background-size: cover;
+}
+
 .img-medium {
     width: 50px;
     height: 50px;
@@ -103,7 +120,7 @@ h4 {
 }
 
 .img-rounded {
-    border-radius: 15px;
+    /*border-radius: 15px;*/
 }
 
 .navbar .btn-navbar.fix-navbar {
@@ -125,7 +142,6 @@ h4 {
 .status-action {
     padding: 0;
     margin: 0;
-    margin-left: 2px;
 }
 
 .status-action:hover {
@@ -138,10 +154,12 @@ h4 {
 
 /*.tatam, .useritem {*/
 .useritem {
-    padding: 0px 0px 0px 60px;
+    padding: 0px 5px 0px 0px;
     overflow: hidden;
     display: none;
-    border-bottom: 1px solid #CCCCCC;
+    border: 1px solid #CCCCCC;
+    background-color: white;
+    margin-bottom: -1px;
 }
 
 .useritemmini {
@@ -171,7 +189,7 @@ h4 {
 }
 
 .tatam > div:first-child, .useritem > div:first-child {
-    margin-left: -60px;
+    /*margin-left: -60px;*/
     padding: 5px;
 }
 
@@ -186,7 +204,7 @@ h4 {
 }
 
 .tatams {
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
 }
 
 .tatam > div:first-child, .useritem > div:first-child {
@@ -198,9 +216,10 @@ h4 {
     padding-bottom: 0px;
 }
 
-.tatam-hover > *:hover {
-    /*background-color: #f5f5f5;*/
-    background-color: #ECF1F7;
+@media screen and (min-width: 767px) {
+    .tatam-hover:hover{
+        background-color: #ECF1F7;
+    }
 }
 
 .tatams > *:last-child {
@@ -222,10 +241,10 @@ h4 {
     margin-top: 5px;
 }
 
-.tatams-discussion {
+/*.tatams-discussion {
     margin-top: 0px;
     margin-left: -60px;
-}
+}*/
 
 .tatams-discussion > .tatam > header {
     margin-top: 0;
@@ -240,8 +259,17 @@ h4 {
 }
 
 .refresh-button {
-    margin-top: 0px;
-    margin-bottom: 0px;
+
+}
+
+.refresh-button-style {
+    border-top: 1px solid #CCCCCC;
+    border-left: 1px solid #CCCCCC;
+    border-right: 1px solid #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
+    margin-bottom: -1px;
+    padding: 10px;    
+    box-shadow: inset 0 3px 8px rgba(0,0,0,.05);
 }
 
 .dropzone {
@@ -259,17 +287,11 @@ h4 {
     border-color: #0088cc;
 }
 
-#tatamiBody {
-    padding: 10px 15px 10px 0px;
-}
-
 .tatam {
     background-color: white;
     border-top: 1px solid #CCCCCC;
-/*    border-right: 1px solid #CCCCCC;
-    border-left: 1px solid #CCCCCC;*/
     border-bottom: 1px solid #CCCCCC;
-    padding: 0px 0px 0px 60px;
+    padding: 0px;
     margin-bottom: -1px;
     overflow: hidden;
     display: none;
@@ -280,8 +302,24 @@ h4 {
     border-left: 1px solid #CCCCCC;
 }
 
-.tatams-content {
-    margin-top: 10px;
+.tatam-first {
+    border-top: 0px;
+}
+
+.tatam-last {
+    border-bottom: 0px;
+}
+
+@media screen and (min-width: 767px) {
+    .tatams-margin {
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .tatams-margin {
+        margin-top: -1px;
+    }
 }
 
 .tatams-content-title {
@@ -289,14 +327,20 @@ h4 {
     border-left: 1px solid #CCCCCC;
     border-right: 1px solid #CCCCCC;
     background-color: white;
-    border-radius: 10px 10px 0px 0px;
+    margin-bottom: 0px;
+    border-radius: 5px 5px 0px 0px;
 }
 
 .tatams-content h3 {
-    padding: 5px 0px 5px 10px;
+    padding: 5px 10px 5px 10px;
     margin: 0px;
     font-weight: normal;
     font-size: 1.4em;
+}
+
+.btn-title {
+    margin-top: 2px;
+    margin-left: 5px;
 }
 
 .tatams-content hr {
@@ -313,11 +357,13 @@ h4 {
 }
 
 .tatam-expand-container {
-    margin-top: 10px;
-    margin-bottom: 10px;
     border-top: 1px solid #CCCCCC;
     border-bottom: 1px solid #CCCCCC;
-    border-radius: 10px;
+    border-radius: 5px;
+}
+
+.tatam-background {
+    background-color: #ECF1F7;
 }
 
 .homebody-nav {
@@ -498,18 +544,69 @@ h4 {
 }
 
 .statusitem-name {
-    padding: 0px;
-    margin: 0 0 0 60px;
+    padding: 0;
+    margin: 0;
 }
 
 .statusitem-content {
-    margin-left: 60px;
+    margin-bottom: 5px;
+    
 }
 
 .statusitem-footer {
-    margin-left: 60px;   
+    padding: 0px;   
 }
 
 .markdown p {
-    margin: 5px 0 5px 0;
+    margin: 0px 0px 0px 0px;
+}
+
+#current {
+    padding: 5px;
+}
+
+#before{
+    padding: 0px;
+    margin: 0px;
+}
+
+#after {
+
+}
+
+#status-content-container {
+    margin-left: 60px;
+}
+
+.statusitem-img {
+    margin-bottom: 5px;
+}
+
+@media screen and (min-width: 767px) {
+    #buttons {
+        clear: both;
+        margin-left: 60px;
+    }
+}
+@media screen and (max-width: 767px) {
+    #buttons {
+        clear: both;
+    }
+
+    .statusitem-footer {
+        background-color: #ECF1F7;
+        border-top: 1px solid #CCCCCC;
+        padding-left: 8px;
+    }
+
+    .button-ios {
+        margin-left: -2px;
+        margin-right: -2px;
+        margin: 2px 4px 2px 0px; 
+    }
+
+    .button-ios-right {
+        border-right: 1px solid #CCCCCC;
+    }
+
 }
