--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -192,6 +192,12 @@ h4 {
     background-position: left top;
 }
 
+.favorite {
+    background-image: url(img/favorite.png);
+    background-repeat: no-repeat;
+    background-position: left top;
+}
+
 .pointer {
     cursor: pointer;
 }
