--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -658,6 +658,10 @@ h4 {
     margin-bottom: 5px;
 }
 
+.attachments {
+    margin-top: 5px;
+}
+
 @media screen and (min-width: 767px) {
     #buttons {
         clear: both;
