--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -75,6 +75,9 @@ h4 {
     height: 10px;
 }
 
+.little-padding-top{
+    padding-top: 3px;
+}
 .little-marge-top{
     margin-top: 5px;
 }
@@ -84,11 +87,10 @@ h4 {
     padding: 0.10em 0.6em;
 }
 #updateAvatar{
-       position: relative;
-
+    position: relative;
+    cursor: hand;
+    cursor: pointer;
 }
-
-
 
 #updateAvatar input[type=file] {
     opacity: 0;
@@ -97,6 +99,7 @@ h4 {
     left: 0;
     height: 40px;
     width: 130px;
+    display: none;
 }
 
 
