Changement des messages success error avec jGrowl

--- a/src/main/webapp/css/tatami.css
+++ b/src/main/webapp/css/tatami.css
@@ -73,6 +73,13 @@ h4 {
 display: block;
 }
 
+
+
+div.jGrowl-notification{
+    background-color : none;
+    opacity : 1;
+}
+
 .little-marge-right{
     margin-right: 20px
 }
